--- a/src/assets/scss/_form.scss
+++ b/src/assets/scss/_form.scss
@@ -7,4 +7,5 @@
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     transition: all 0.3s cubic-bezier(.25,.8,.25,1);
     padding: 30px 50px;
+    margin-bottom: 30px;
 }
