--- a/src/assets/scss/_user-details.scss
+++ b/src/assets/scss/_user-details.scss
@@ -9,6 +9,7 @@
     padding: 20px 50px;
     text-align: left;
     margin-bottom: 20px;
+    margin-top: -30px;
 
     &__description {
         width: 80%;
